# nsw-property-sales-data

./: .gitignore  LICENSE  NOTICES.md  README.md  notes.md  pyproject.toml
src/nsw_property_sales_data/: __main__.py  cli.py  db.py  ingest.py  protocols.py  query.py  raw_data.py  schema.sql  sync_db.py
src/nsw_property_sales_data/data/: districts.csv  zones.csv
tests/: conftest.py  test_db.py  test_ingest.py  test_query.py  test_raw_data_retrieval.py
tests/pages/: Valuer General NSW Valuation Portal.html  page_20260502.html
