[project]
name = "nsw-property-sales-data"
version = "0.1.0"
description = "Provides a simple way to consume NSW property sales data via SQLite."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "python-dateutil>=2.9.0.post0",
]

[project.scripts]
sync_db = "nsw_property_sales_data.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nsw_property_sales_data"]

[dependency-groups]
dev = [
    "mdformat>=0.7.22",
    "mdformat-gfm>=0.4.1",
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]

[tool.pyright]
include = ["src", "tests"]
exclude = []
